# aimet

./: .dockerignore  .gitignore  .pylintrc  CMakeLists.txt  README.md  dobuildntest.sh  pyproject.toml
.github/actions/changed-files/: action.yml
.github/actions/docker-tag/: action.yml
.github/workflows/: build-wheels.yml  ci.yml  nightly-pipeline.yml  pipeline.yml  pypi-release-pipeline.yml  run-acceptance-tests.yml  run-unit-tests.yml
Docs/: conf.py  glossary.rst  index.rst  release_notes.rst  versions.rst
Docs/_static/: aimet-furo.css
Docs/api_docs/: torch_mixed_precision.rst
Docs/apiref/: index.rst
Docs/apiref/onnx/: amp.rst
Docs/apiref/tensorflow/: index.rst  model_preparer.rst
Docs/beta/: conf.py  index.rst  release_notes.rst  versions.rst
Docs/featureguide/: adaround.rst  autoquant.rst  bn.rst  bnf.rst  cle.rst  index.rst  seq_mse.rst
Docs/install/: basic_install.rst  index.rst  install_docker.rst  install_host.rst  quick-start.rst
Docs/quantsim/: advanced.rst  blockwise.rst  calibration.rst  encoding_spec.rst  index.rst  qat.rst
Docs/torch_code_examples/: mixed_precision.py  quantsim_code_example.py
Docs/userguide/: debugging_guidelines.rst  quantization_tools.rst  quantization_workflow.rst
Examples/: CMakeLists.txt  README.md
Jenkins/: Dockerfile.onnx-cpu  Dockerfile.onnx-gpu  Dockerfile.tf-cpu  Dockerfile.tf-gpu  Dockerfile.tf-torch-cpu  Dockerfile.torch-cpu  Dockerfile.torch-gpu  Jenkinsfile
Jenkins/fast-release/: Dockerfile.ci  Dockerfile.torch-gpu  environment.devenv.yml
ModelOptimizations/DlCompression/: CMakeLists.txt
ModelOptimizations/DlEqualization/: CMakeLists.txt
ModelOptimizations/DlQuantization/: CMakeLists.txt
ModelOptimizations/PyModelOptimizations/: CMakeLists.txt  PyModelOptimizations.cpp  PyTensorQuantizer.cpp  PyTensorQuantizer.hpp
NightlyTests/onnx/: test_adaround.py
NightlyTests/tensorflow/: test_adaround_keras.py  test_connected_graph_keras.py  test_cross_layer_equalization_keras.py  test_quantize_resnet50_keras.py
NightlyTests/torch/: CMakeLists.txt  dependencies.py  test_adaround.py  test_bias_correction.py  test_compress_example_torch.py  test_cross_layer_equalization.py  test_for_QAT_and_finetuning_MNIST.py  test_mixed_precision.py  test_model_preparer.py  test_quantize_resnet18.py
TrainingExtensions/common/: CMakeLists.txt
TrainingExtensions/onnx/: CMakeLists.txt
TrainingExtensions/tensorflow/: CMakeLists.txt
TrainingExtensions/torch/: CMakeLists.txt
cmake/: ThirdPartyDependencies.cmake
packaging/: convert_wheel_format.sh  docker_install.md  package_aimet.cmake
packaging/dependencies/: reqs_deb_torch_common.txt  reqs_pip_common.txt  reqs_pip_onnx_common.txt  reqs_pip_tf_common.txt  reqs_pip_tf_common_legacy.txt  reqs_pip_torch_common.txt  reqs_pip_torch_common_legacy.txt
(+510 files in other folders)
